- Added support for snapping to top and bottom

--- a/tile/tile.xcodeproj/xcshareddata/xcschemes/tile.xcscheme
+++ b/tile/tile.xcodeproj/xcshareddata/xcschemes/tile.xcscheme
@@ -69,7 +69,15 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "left"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "up"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "down"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-show-create"
